refactor module deposit

--- a/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-terms-step/fixed-deposit-account-terms-step.component.html
+++ b/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-terms-step/fixed-deposit-account-terms-step.component.html
@@ -3,39 +3,39 @@
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Deposit Amount</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Terms.depositAmount" | translate }}</mat-label>
       <input type="text" currencyMask matInput formControlName="depositAmount" required>
       <mat-error>
-        Fixed Deposit Amount is <strong>required</strong>
+        {{ "Deposits.Fixed.Stepper.Terms.errdepositAmount" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <span fxFlex="48%" fxHide.lt-md></span>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Deposit Period Frequency</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Terms.depositPeriod" | translate }}</mat-label>
       <input type="number" matInput formControlName="depositPeriod" required>
       <mat-error>
-        Deposit Period Frequency is <strong>required</strong>
+        {{ "Deposits.Fixed.Stepper.Terms.errdepositPeriod" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Deposit Period Type</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Terms.depositPeriodFrequencyId" | translate }}</mat-label>
       <mat-select formControlName="depositPeriodFrequencyId" required>
         <mat-option *ngFor="let periodFrequencyType of periodFrequencyTypeData" [value]="periodFrequencyType.id">
           {{ periodFrequencyType.value }}
         </mat-option>
       </mat-select>
       <mat-error>
-        Deposit Period Type is <strong>required</strong>
+        {{ "Deposits.Fixed.Stepper.Terms.errdepositPeriodFrequencyId" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-divider fxFlex="98%"></mat-divider>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Interest Compounding Period</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Terms.interestCompoundingPeriodType" | translate }}</mat-label>
       <mat-select formControlName="interestCompoundingPeriodType" required>
         <mat-option *ngFor="let interestCompoundingPeriodType of interestCompoundingPeriodTypeData"
           [value]="interestCompoundingPeriodType.id">
@@ -43,12 +43,12 @@
         </mat-option>
       </mat-select>
       <mat-error>
-        Interest Compounding Period is <strong>required</strong>
+        {{ "Deposits.Fixed.Stepper.Terms.errinterestCompoundingPeriodType" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Interest Posting Period</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Terms.interestPostingPeriodType" | translate }}</mat-label>
       <mat-select formControlName="interestPostingPeriodType" required>
         <mat-option *ngFor="let interestPostingPeriodType of interestPostingPeriodTypeData"
           [value]="interestPostingPeriodType.id">
@@ -56,12 +56,12 @@
         </mat-option>
       </mat-select>
       <mat-error>
-        Interest Posting Period is <strong>required</strong>
+        {{ "Deposits.Fixed.Stepper.Terms.errinterestPostingPeriodType" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Interest Calculated using</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Terms.interestCalculationType" | translate }}</mat-label>
       <mat-select formControlName="interestCalculationType" required>
         <mat-option *ngFor="let interestCalculationType of interestCalculationTypeData"
           [value]="interestCalculationType.id">
@@ -69,12 +69,12 @@
         </mat-option>
       </mat-select>
       <mat-error>
-        Interest Calculated using is <strong>required</strong>
+        {{ "Deposits.Fixed.Stepper.Terms.errinterestCalculationType" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Days in Year</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Terms.interestCalculationDaysInYearType" | translate }}</mat-label>
       <mat-select formControlName="interestCalculationDaysInYearType" required>
         <mat-option *ngFor="let interestCalculationDaysInYearType of interestCalculationDaysInYearTypeData"
           [value]="interestCalculationDaysInYearType.id">
@@ -82,7 +82,7 @@
         </mat-option>
       </mat-select>
       <mat-error>
-        Days in Year is <strong>required</strong>
+        {{ "Deposits.Fixed.Stepper.Terms.errinterestCalculationDaysInYearType" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
@@ -91,10 +91,10 @@
   <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
     <button mat-raised-button matStepperPrevious>
       <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-      Previous
+      {{ "ShareButton.PreviousEng" | translate }}
     </button>
     <button mat-raised-button matStepperNext>
-      Next&nbsp;&nbsp;
+      {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
       <fa-icon icon="arrow-right"></fa-icon>
     </button>
   </div>
