--- a/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-currency-step/fixed-deposit-account-currency-step.component.html
+++ b/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-currency-step/fixed-deposit-account-currency-step.component.html
@@ -3,17 +3,17 @@
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Currency</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Currency.currencyCode" | translate }}</mat-label>
       <input type="text" matInput formControlName="currencyCode">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Decimal Places</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Currency.decimalPlaces" | translate }}</mat-label>
       <input type="number" matInput formControlName="decimalPlaces">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Currency Multiple</mat-label>
+      <mat-label>{{ "Deposits.Fixed.Stepper.Currency.currencyMultiple" | translate }}</mat-label>
       <input type="number" matInput formControlName="currencyMultiple">
     </mat-form-field>
 
@@ -22,10 +22,10 @@
   <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
     <button mat-raised-button matStepperPrevious>
       <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-      Previous
+      {{ "ShareButton.PreviousEng" | translate }}
     </button>
     <button mat-raised-button matStepperNext>
-      Next&nbsp;&nbsp;
+      {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
       <fa-icon icon="arrow-right"></fa-icon>
     </button>
   </div>
