--- a/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-interest-rate-chart-step/fixed-deposit-account-interest-rate-chart-step.component.html
+++ b/src/app/deposits/fixed-deposits/fixed-deposit-account-stepper/fixed-deposit-account-interest-rate-chart-step/fixed-deposit-account-interest-rate-chart-step.component.html
@@ -1,64 +1,64 @@
 <div fxLayout="column" fxLayoutGap="2%">
 
   <div fxFlexFill *ngIf="fixedDepositsAccountProductTemplate?.accountChart.name">
-    <span fxFlex="40%">Name:</span>
+    <span fxFlex="40%">{{ "Deposits.Fixed.Stepper.InterestRate.name" | translate }}</span>
     <span fxFlex="60%">{{ fixedDepositsAccountProductTemplate.accountChart.name }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Valid from Date:</span>
+    <span fxFlex="40%">{{ "Deposits.Fixed.Stepper.InterestRate.fromDate" | translate }}</span>
     <span fxFlex="60%">{{ fixedDepositsAccountProductTemplate?.accountChart.fromDate | date }}</span>
   </div>
 
   <div fxFlexFill *ngIf="fixedDepositsAccountProductTemplate?.accountChart.endDate">
-    <span fxFlex="40%">End Date:</span>
+    <span fxFlex="40%">{{ "Deposits.Fixed.Stepper.InterestRate.endDate" | translate }}</span>
     <span fxFlex="60%">{{ fixedDepositsAccountProductTemplate?.accountChart.endDate | date }}</span>
   </div>
 
   <div fxFlexFill *ngIf="fixedDepositsAccountProductTemplate?.accountChart.description">
-    <span fxFlex="40%">Description:</span>
+    <span fxFlex="40%">{{ "Deposits.Fixed.Stepper.InterestRate.description" | translate }}</span>
     <span fxFlex="60%">{{ fixedDepositsAccountProductTemplate?.accountChart.description }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Primary Grouping by Amount:</span>
+    <span fxFlex="40%">{{ "Deposits.Fixed.Stepper.InterestRate.isPrimaryGroupingByAmount" | translate }}</span>
     <span fxFlex="60%">{{ fixedDepositsAccountProductTemplate?.accountChart.isPrimaryGroupingByAmount ? 'Yes' : 'No' }}</span>
   </div>
 
   <table class="mat-elevation-z1" mat-table [dataSource]="interestRateChartData" #chartsTable multiTemplateDataRows>
 
     <ng-container matColumnDef="period">
-      <th mat-header-cell *matHeaderCellDef> Period </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.period" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab">
         {{chartSlab.fromPeriod}}-{{chartSlab.toPeriod}}&nbsp;{{chartSlab.periodType.value}}</td>
     </ng-container>
 
     <ng-container matColumnDef="amountRange">
-      <th mat-header-cell *matHeaderCellDef> Amount Range </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.amountRange" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab">{{chartSlab.amountRangeFrom}}-{{chartSlab.amountRangeTo}}</td>
     </ng-container>
 
     <ng-container matColumnDef="interest">
-      <th mat-header-cell *matHeaderCellDef> Interest </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.interest" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab"> {{ chartSlab.annualInterestRate }} </td>
     </ng-container>
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.description2" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab"> {{ chartSlab.description }} </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.actions" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab; let chartSlabIndex = dataIndex">
         <button mat-button color="primary" (click)="expandChartSlabIndex = expandChartSlabIndex === chartSlabIndex ? null : chartSlabIndex">
           <span *ngIf="expandChartSlabIndex !== chartSlabIndex">
             <fa-icon icon="eye"></fa-icon>&nbsp;&nbsp;
-            View Incentives
+            {{ "Deposits.Fixed.Stepper.InterestRate.btnViewIncentives" | translate }}
           </span>
           <span *ngIf="expandChartSlabIndex === chartSlabIndex">
             <fa-icon icon="eye-slash"></fa-icon>&nbsp;&nbsp;
-            Hide Incentives
+            {{ "Deposits.Fixed.Stepper.InterestRate.btnHideIncentives" | translate }}
           </span>
         </button>
       </td>
@@ -72,48 +72,48 @@
           <mat-card fxLayout="row wrap" fxFlexFill>
 
             <h4 class="m-b-10" fxFlex="13%">
-              Incentives
+              {{ "Deposits.Fixed.Stepper.InterestRate.h4" | translate }}
             </h4>
 
             <table fxFlexFill class="mat-elevation-z1" mat-table [dataSource]="chartSlab.incentives" *ngIf="chartSlab.incentives.length">
 
               <ng-container matColumnDef="entityType">
-                <th mat-header-cell *matHeaderCellDef> Entity Type </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.table.entityType" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.entityType.value }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="attributeName">
-                <th mat-header-cell *matHeaderCellDef> Attribute Name </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.table.attributeName" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.attributeName.value }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="conditionType">
-                <th mat-header-cell *matHeaderCellDef> Condition Type </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.table.conditionType" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.conditionType.value | titlecase }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="attributeValue">
-                <th mat-header-cell *matHeaderCellDef> Attribute Value </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.table.attributeValue" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive" [ngSwitch]="incentive.attributeName">
                   {{ incentive.attributeValueDesc }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="incentiveType">
-                <th mat-header-cell *matHeaderCellDef> Incentive Type </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.table.incentiveType" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.incentiveType.value }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="amount">
-                <th mat-header-cell *matHeaderCellDef> Interest </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.Stepper.InterestRate.table.amount" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.amount }}
                 </td>
@@ -140,10 +140,10 @@
 <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
   <button mat-raised-button matStepperPrevious>
     <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-    Previous
+    {{ "ShareButton.PreviousEng" | translate }}
   </button>
   <button mat-raised-button matStepperNext>
-    Next&nbsp;&nbsp;
+    {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
     <fa-icon icon="arrow-right"></fa-icon>
   </button>
 </div>
