--- a/src/app/deposits/fixed-deposits/fixed-deposit-account-view/custom-dialogs/inactivate-charge-dialog/inactivate-charge-dialog.component.html
+++ b/src/app/deposits/fixed-deposits/fixed-deposit-account-view/custom-dialogs/inactivate-charge-dialog/inactivate-charge-dialog.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>Inactivate Charge</h1>
+<h1 mat-dialog-title>{{ "Deposits.Fixed.View.CustomDialog.InactiveCharge.h1" | translate }}</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to inactivate charge with id: {{ data.id }} ?</p>
+  <p>{{ "Deposits.Fixed.View.CustomDialog.InactiveCharge.p" | translate }}{{ data.id }} ?</p>
 </div>
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button color="primary" [mat-dialog-close]="{ confirm: true }">Confirm</button>
+  <button mat-raised-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
+  <button mat-raised-button color="primary" [mat-dialog-close]="{ confirm: true }">{{ "ShareButton.ConfirmEng" | translate }}</button>
 </mat-dialog-actions>
