--- a/src/app/deposits/fixed-deposits/fixed-deposit-account-view/custom-dialogs/toggle-withhold-tax-dialog/toggle-withhold-tax-dialog.component.html
+++ b/src/app/deposits/fixed-deposits/fixed-deposit-account-view/custom-dialogs/toggle-withhold-tax-dialog/toggle-withhold-tax-dialog.component.html
@@ -1,8 +1,8 @@
-<h1 mat-dialog-title>{{ data.isEnable ? 'Enable' : 'Disable' }} Withhold Tax</h1>
+<h1 mat-dialog-title>{{ data.isEnable ? 'Enable' : 'Disable' }} {{ "Deposits.Fixed.View.CustomDialog.ToggleWithholdTax.h1" | translate }}</h1>
 <div mat-dialog-content>
-  <p>Are you sure you want to {{ data.isEnable ? 'enable' : 'disable' }} withhold tax for this account ?</p>
+  <p>{{ "Deposits.Fixed.View.CustomDialog.ToggleWithholdTax.p" | translate }}{{ data.isEnable ? 'enable' : 'disable' }} {{ "Deposits.Fixed.View.CustomDialog.ToggleWithholdTax.p2" | translate }}</p>
 </div>
 <mat-dialog-actions align="end">
-  <button mat-raised-button mat-dialog-close>Cancel</button>
-  <button mat-raised-button color="{{ data.isEnable ? 'accent' : 'warn' }}" [mat-dialog-close]="{ confirm: true }">Confirm</button>
+  <button mat-raised-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
+  <button mat-raised-button color="{{ data.isEnable ? 'accent' : 'warn' }}" [mat-dialog-close]="{ confirm: true }">{{ "ShareButton.ConfirmEng" | translate }}</button>
 </mat-dialog-actions>
