--- a/src/app/deposits/fixed-deposits/fixed-deposit-account-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/deposits/fixed-deposits/fixed-deposit-account-view/transactions-tab/transactions-tab.component.html
@@ -2,7 +2,7 @@
 
   <div fxLayoutAlign="start">
     <div class="m-b-20">
-      <h3>All Transactions</h3>
+      <h3>{{ "Deposits.Fixed.View.TransactionsTab.h3" | translate }}</h3>
     </div>
   </div>
 
@@ -11,32 +11,32 @@
     <table mat-table [dataSource]="dataSource" >
 
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.View.TransactionsTab.id" | translate }} </th>
         <td mat-cell *matCellDef="let transaction"> {{ transaction.id }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionDate">
-        <th mat-header-cell *matHeaderCellDef> Transaction Date </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.View.TransactionsTab.transactionDate" | translate }} </th>
         <td mat-cell *matCellDef="let transaction"> {{ transaction.date | date }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionType">
-        <th mat-header-cell *matHeaderCellDef> Transaction Type </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.View.TransactionsTab.transactionType" | translate }} </th>
         <td mat-cell *matCellDef="let transaction"> {{ transaction.transactionType.value  }} </td>
       </ng-container>
 
       <ng-container matColumnDef="debit">
-        <th mat-header-cell *matHeaderCellDef> Debit </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.View.TransactionsTab.debit" | translate }} </th>
         <td mat-cell *matCellDef="let transaction"> {{ isDebit(transaction.transactionType) ? transaction.amount : 'N/A'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="credit">
-        <th mat-header-cell *matHeaderCellDef> Credit </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.View.TransactionsTab.credit" | translate }} </th>
         <td mat-cell *matCellDef="let transaction"> {{ !isDebit(transaction.transactionType) ? transaction.amount : 'N/A' }} </td>
       </ng-container>
 
       <ng-container matColumnDef="balance">
-        <th mat-header-cell *matHeaderCellDef> Balance </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Fixed.View.TransactionsTab.balance" | translate }} </th>
         <td mat-cell *matCellDef="let transaction"> {{ transaction.runningBalance | money }} </td>
       </ng-container>
 
