--- a/src/app/deposits/fixed-deposits/fixed-deposits-account-actions/premature-close-fixed-deposits-account/premature-close-fixed-deposits-account.component.html
+++ b/src/app/deposits/fixed-deposits/fixed-deposits-account-actions/premature-close-fixed-deposits-account/premature-close-fixed-deposits-account.component.html
@@ -9,51 +9,51 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Premature Close Date</mat-label>
+            <mat-label>{{ "Deposits.Fixed.Actions.Premature.closedOnDate" | translate }}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="closedOnDatePicker" required formControlName="closedOnDate">
             <mat-datepicker-toggle matSuffix [for]="closedOnDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #closedOnDatePicker></mat-datepicker>
             <mat-error *ngIf="prematureCloseAccountForm.controls.closedOnDate.hasError('required')">
-              Premature Close Date is <strong>required</strong>
+              {{ "Deposits.Fixed.Actions.Premature.errclosedOnDate" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="prematureCloseAccountForm.controls.maturityAmount">
-            <mat-label>Maturity Amount</mat-label>
+            <mat-label>{{ "Deposits.Fixed.Actions.Premature.maturityAmount" | translate }}</mat-label>
             <input currencyMask type="text" matInput formControlName="maturityAmount"/>
           </mat-form-field>
 
           <mat-form-field *ngIf="prematureCloseAccountForm.contains('onAccountClosureId')">
-            <mat-label>Action</mat-label>
+            <mat-label>{{ "Deposits.Fixed.Actions.Premature.onAccountClosureId" | translate }}</mat-label>
             <mat-select required formControlName="onAccountClosureId">
               <mat-option *ngFor="let closureOption of onAccountClosureOptions" [value]="closureOption.id">
                 {{ closureOption.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="prematureCloseAccountForm.controls.onAccountClosureId.hasError('required')">
-              Account action is <strong>required</strong>
+              {{ "Deposits.Fixed.Actions.Premature.erronAccountClosureId" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="prematureCloseAccountForm.contains('toSavingsAccountId')">
-            <mat-label>Transfer to Savings</mat-label>
+            <mat-label>{{ "Deposits.Fixed.Actions.Premature.toSavingsAccountId" | translate }}</mat-label>
             <mat-select required formControlName="toSavingsAccountId">
               <mat-option *ngFor="let account of savingsAccountsData" [value]="account.id">
                 {{ account.accountNo }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="prematureCloseAccountForm.controls.toSavingsAccountId.hasError('required')">
-              Transfer to savings account is <strong>required</strong>
+              {{ "Deposits.Fixed.Actions.Premature.errtoSavingsAccountId" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field *ngIf="prematureCloseAccountForm.contains('transferDescription')">
-            <mat-label>Transfer Description</mat-label>
+            <mat-label>{{ "Deposits.Fixed.Actions.Premature.transferDescription" | translate }}</mat-label>
             <input matInput formControlName="transferDescription"/>
           </mat-form-field>
 
           <mat-form-field *ngIf="prematureCloseAccountForm.contains('note')">
-            <mat-label>Note</mat-label>
+            <mat-label>{{ "Deposits.Fixed.Actions.Premature.note" | translate }}</mat-label>
             <textarea matInput formControlName="note"></textarea>
           </mat-form-field>
 
@@ -62,8 +62,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="warn" [disabled]="!prematureCloseAccountForm.valid">Confirm</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="warn" [disabled]="!prematureCloseAccountForm.valid">{{ "ShareButton.ConfirmEng" | translate }}</button>
       </mat-card-actions>
 
     </form>
