--- a/src/app/deposits/recurring-deposits/recurring-deposits-account-stepper/recurring-deposits-account-interest-rate-chart-step/recurring-deposits-account-interest-rate-chart-step.component.html
+++ b/src/app/deposits/recurring-deposits/recurring-deposits-account-stepper/recurring-deposits-account-interest-rate-chart-step/recurring-deposits-account-interest-rate-chart-step.component.html
@@ -1,27 +1,27 @@
 <div fxLayout="column" fxLayoutGap="2%">
 
   <div fxFlexFill *ngIf="recurringDepositsAccountProductTemplate?.accountChart.name">
-    <span fxFlex="40%">Name:</span>
+    <span fxFlex="40%">{{ "Deposits.Recurring.Stepper.InterestRate.name" | translate }}</span>
     <span fxFlex="60%">{{ recurringDepositsAccountProductTemplate.accountChart.name }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Valid from Date:</span>
+    <span fxFlex="40%">{{ "Deposits.Recurring.Stepper.InterestRate.fromDate" | translate }}</span>
     <span fxFlex="60%">{{ recurringDepositsAccountProductTemplate?.accountChart.fromDate | date }}</span>
   </div>
 
   <div fxFlexFill *ngIf="recurringDepositsAccountProductTemplate?.accountChart.endDate">
-    <span fxFlex="40%">End Date:</span>
+    <span fxFlex="40%">{{ "Deposits.Recurring.Stepper.InterestRate.endDate" | translate }}</span>
     <span fxFlex="60%">{{ recurringDepositsAccountProductTemplate?.accountChart.endDate | date }}</span>
   </div>
 
   <div fxFlexFill *ngIf="recurringDepositsAccountProductTemplate?.accountChart.description">
-    <span fxFlex="40%">Description:</span>
+    <span fxFlex="40%">{{ "Deposits.Recurring.Stepper.InterestRate.description" | translate }}</span>
     <span fxFlex="60%">{{ recurringDepositsAccountProductTemplate?.accountChart.description }}</span>
   </div>
 
   <div fxFlexFill>
-    <span fxFlex="40%">Primary Grouping by Amount:</span>
+    <span fxFlex="40%">{{ "Deposits.Recurring.Stepper.InterestRate.isPrimaryGroupingByAmount" | translate }}</span>
     <span
       fxFlex="60%">{{ recurringDepositsAccountProductTemplate?.accountChart.isPrimaryGroupingByAmount ? 'Yes' : 'No' }}</span>
   </div>
@@ -29,38 +29,38 @@
   <table class="mat-elevation-z1" mat-table [dataSource]="interestRateChartData" #chartsTable multiTemplateDataRows>
 
     <ng-container matColumnDef="period">
-      <th mat-header-cell *matHeaderCellDef> Period </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.periodType" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab">
         {{chartSlab.fromPeriod}}-{{chartSlab.toPeriod}}&nbsp;{{chartSlab.periodType.value}}</td>
     </ng-container>
 
     <ng-container matColumnDef="amountRange">
-      <th mat-header-cell *matHeaderCellDef> Amount Range </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.amountRangeTo" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab">{{chartSlab.amountRangeFrom}}-{{chartSlab.amountRangeTo}}</td>
     </ng-container>
 
     <ng-container matColumnDef="interest">
-      <th mat-header-cell *matHeaderCellDef> Interest </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.annualInterestRate" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab"> {{ chartSlab.annualInterestRate }} </td>
     </ng-container>
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.description2" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab"> {{ chartSlab.description }} </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.actions" | translate }} </th>
       <td mat-cell *matCellDef="let chartSlab; let chartSlabIndex = dataIndex">
         <button mat-button color="primary"
           (click)="expandChartSlabIndex = expandChartSlabIndex === chartSlabIndex ? null : chartSlabIndex">
           <span *ngIf="expandChartSlabIndex !== chartSlabIndex">
             <fa-icon icon="eye"></fa-icon>&nbsp;&nbsp;
-            View Incentives
+            {{ "Deposits.Recurring.Stepper.InterestRate.ViewIncentives" | translate }}
           </span>
           <span *ngIf="expandChartSlabIndex === chartSlabIndex">
             <fa-icon icon="eye-slash"></fa-icon>&nbsp;&nbsp;
-            Hide Incentives
+           {{ "Deposits.Recurring.Stepper.InterestRate.HideIncentives" | translate }}
           </span>
         </button>
       </td>
@@ -83,42 +83,42 @@
               *ngIf="chartSlab.incentives.length">
 
               <ng-container matColumnDef="entityType">
-                <th mat-header-cell *matHeaderCellDef> Entity Type </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.entityType" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.entityType.value }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="attributeName">
-                <th mat-header-cell *matHeaderCellDef> Attribute Name </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.attributeName" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.attributeName.value }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="conditionType">
-                <th mat-header-cell *matHeaderCellDef> Condition Type </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.conditionType" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.conditionType.value | titlecase }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="attributeValue">
-                <th mat-header-cell *matHeaderCellDef> Attribute Value </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.attributeValue" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive" [ngSwitch]="incentive.attributeName">
                   {{ incentive.attributeValueDesc }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="incentiveType">
-                <th mat-header-cell *matHeaderCellDef> Incentive Type </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.incentiveType" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.incentiveType.value }}
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="amount">
-                <th mat-header-cell *matHeaderCellDef> Interest </th>
+                <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.Stepper.InterestRate.amount" | translate }} </th>
                 <td mat-cell *matCellDef="let incentive">
                   {{ incentive.amount | money }}
                 </td>
@@ -145,10 +145,10 @@
 <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
   <button mat-raised-button matStepperPrevious>
     <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-    Previous
+    {{ "ShareButton.PreviousEng" | translate }}
   </button>
   <button mat-raised-button matStepperNext>
-    Next&nbsp;&nbsp;
+    {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
     <fa-icon icon="arrow-right"></fa-icon>
   </button>
 </div>
