--- a/src/app/deposits/recurring-deposits/recurring-deposits-account-stepper/recurring-deposits-account-settings-step/recurring-deposits-account-settings-step.component.html
+++ b/src/app/deposits/recurring-deposits/recurring-deposits-account-stepper/recurring-deposits-account-settings-step/recurring-deposits-account-settings-step.component.html
@@ -3,27 +3,27 @@
   <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
     <mat-checkbox fxFlex="48%" labelPosition="before" formControlName="isMandatoryDeposit" class="margin-v">
-      Is Mandatory Deposit?
+      {{ "Deposits.Recurring.Stepper.Settings.isMandatoryDeposit" | translate }}
     </mat-checkbox>
 
     <mat-checkbox fxFlex="48%" labelPosition="before" formControlName="adjustAdvanceTowardsFuturePayments"
       class="margin-v">
-      Adjust advance payments toward future installments?
+      {{ "Deposits.Recurring.Stepper.Settings.adjustAdvanceTowardsFuturePayments" | translate }}
     </mat-checkbox>
 
     <mat-checkbox fxFlex="48%" labelPosition="before" formControlName="allowWithdrawal" class="margin-v">
-      Allow Withdrawals?
+      {{ "Deposits.Recurring.Stepper.Settings.allowWithdrawal" | translate }}
     </mat-checkbox>
 
-    <h4 fxFlex="98%" class="mat-h4">Lock-in Period</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{ "Deposits.Recurring.Stepper.Settings.h4" | translate }}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Frequency</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.lockinPeriodFrequency" | translate }}</mat-label>
       <input type="number" matInput formControlName="lockinPeriodFrequency">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Type</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.lockinPeriodFrequencyType" | translate }}</mat-label>
       <mat-select formControlName="lockinPeriodFrequencyType">
         <mat-option *ngFor="let lockinPeriodFrequencyType of lockinPeriodFrequencyTypeData"
           [value]="lockinPeriodFrequencyType.id">
@@ -32,25 +32,25 @@
       </mat-select>
     </mat-form-field>
 
-    <h4 fxFlex="98%" class="mat-h4">Recurring Deposit Details</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{ "Deposits.Recurring.Stepper.Settings.h4_2" | translate }}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Recurring Deposit Amount</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.mandatoryRecommendedDepositAmount" | translate }}</mat-label>
       <input currencyMask type="text" matInput formControlName="mandatoryRecommendedDepositAmount" required>
       <mat-error>
-        Recurring Deposit Amount is <strong>required</strong>
+        {{ "Deposits.Recurring.Stepper.Settings.errmandatoryRecommendedDepositAmount" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
-    <h4 fxFlex="98%" class="mat-h4">Deposit Period</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{ "Deposits.Recurring.Stepper.Settings.h4_3" | translate }}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Deposit Period</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.depositPeriod" | translate }}</mat-label>
       <input type="number" matInput formControlName="depositPeriod" required>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Type</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.depositPeriodFrequencyId" | translate }}</mat-label>
       <mat-select formControlName="depositPeriodFrequencyId" required>
         <mat-option *ngFor="let periodFrequencyType of periodFrequencyTypeData" [value]="periodFrequencyType.id">
           {{ periodFrequencyType.value }}
@@ -59,37 +59,37 @@
     </mat-form-field>
 
     <mat-checkbox fxFlex="48%" labelPosition="before" formControlName="isCalendarInherited" class="margin-v">
-      Deposit Frequency Same as Group/Center meeting
+      {{ "Deposits.Recurring.Stepper.Settings.isCalendarInherited" | translate }}
     </mat-checkbox>
 
     <ng-container *ngIf="!recurringDepositAccountSettingsForm.value.isCalendarInherited">
       <mat-form-field fxFlex="48%">
-        <mat-label>Deposit Start Date</mat-label>
+        <mat-label>{{ "Deposits.Recurring.Stepper.Settings.expectedFirstDepositOnDate" | translate }}</mat-label>
         <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="expectedFirstDepositOnDatePicker"
           formControlName="expectedFirstDepositOnDate" required>
         <mat-datepicker-toggle matSuffix [for]="expectedFirstDepositOnDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #expectedFirstDepositOnDatePicker></mat-datepicker>
       </mat-form-field>
 
-      <h4 fxFlex="98%" class="mat-h4">Deposit Frequency</h4>
+      <h4 fxFlex="98%" class="mat-h4">{{ "Deposits.Recurring.Stepper.Settings.h4_4" | translate }}</h4>
 
       <mat-form-field fxFlex="48%">
-        <mat-label>Deposit Frequency</mat-label>
+        <mat-label>{{ "Deposits.Recurring.Stepper.Settings.recurringFrequency" | translate }}</mat-label>
         <input type="number" matInput formControlName="recurringFrequency" required>
         <mat-error>
-          Deposit Frequency is <strong>required</strong>
+          {{ "Deposits.Recurring.Stepper.Settings.errrecurringFrequency" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-form-field fxFlex="48%">
-        <mat-label>Type</mat-label>
+        <mat-label>{{ "Deposits.Recurring.Stepper.Settings.recurringFrequencyType" | translate }}</mat-label>
         <mat-select formControlName="recurringFrequencyType" required>
           <mat-option *ngFor="let periodFrequencyType of periodFrequencyTypeData" [value]="periodFrequencyType.id">
             {{ periodFrequencyType.value }}
           </mat-option>
         </mat-select>
         <mat-error>
-          Deposit Frequency Type is <strong>required</strong>
+          {{ "Deposits.Recurring.Stepper.Settings.errrecurringFrequencyType" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
         </mat-error>
       </mat-form-field>
     </ng-container>
@@ -97,37 +97,37 @@
 
     <mat-divider fxFlex="98%"></mat-divider>
 
-    <h4 fxFlex="98%" class="mat-h4">Minimum Deposit Term</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{ "Deposits.Recurring.Stepper.Settings.h4_5" | translate }}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Frequency</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.minDepositTerm" | translate }}</mat-label>
       <input type="number" matInput formControlName="minDepositTerm" required>
       <mat-error>
-        Minimum Deposit Term Frequency is <strong>required</strong>
+        {{ "Deposits.Recurring.Stepper.Settings.errminDepositTerm" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Frequency Type</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.minDepositTermTypeId" | translate }}</mat-label>
       <mat-select formControlName="minDepositTermTypeId" required>
         <mat-option *ngFor="let periodFrequencyType of periodFrequencyTypeData" [value]="periodFrequencyType.id">
           {{ periodFrequencyType.value }}
         </mat-option>
       </mat-select>
       <mat-error>
-        Minimum Deposit Term Frequency Type is <strong>required</strong>
+        {{ "Deposits.Recurring.Stepper.Settings.errminDepositTermTypeId" | translate }}<strong>{{ "Deposits.strongRequired" | translate }}</strong>
       </mat-error>
     </mat-form-field>
 
-    <h4 fxFlex="98%" class="mat-h4">And thereafter, in Multiples of</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{ "Deposits.Recurring.Stepper.Settings.h4_6" | translate }}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Frequency</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.inMultiplesOfDepositTerm" | translate }}</mat-label>
       <input type="number" matInput formControlName="inMultiplesOfDepositTerm">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Type</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.inMultiplesOfDepositTermTypeId" | translate }}</mat-label>
       <mat-select formControlName="inMultiplesOfDepositTermTypeId">
         <mat-option *ngFor="let periodFrequencyType of periodFrequencyTypeData" [value]="periodFrequencyType.id">
           {{ periodFrequencyType.value }}
@@ -135,15 +135,15 @@
       </mat-select>
     </mat-form-field>
 
-    <h4 fxFlex="98%" class="mat-h4">Maximum Deposit Term</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{ "Deposits.Recurring.Stepper.Settings.h4_7" | translate }}</h4>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Frequency</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.maxDepositTerm" | translate }}</mat-label>
       <input type="number" matInput formControlName="maxDepositTerm">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Type</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.maxDepositTermTypeId" | translate }}</mat-label>
       <mat-select formControlName="maxDepositTermTypeId">
         <mat-option *ngFor="let periodFrequencyType of periodFrequencyTypeData" [value]="periodFrequencyType.id">
           {{ periodFrequencyType.value }}
@@ -153,19 +153,19 @@
 
     <mat-divider fxFlex="98%"></mat-divider>
 
-    <h4 fxFlex="98%" class="mat-h4">For Pre-mature closure</h4>
+    <h4 fxFlex="98%" class="mat-h4">{{ "Deposits.Recurring.Stepper.Settings.h4_8" | translate }}</h4>
 
     <mat-checkbox fxFlex="73%" labelPosition="before" formControlName="preClosurePenalApplicable" class="margin-v">
-      Apply Penal Interest (less)
+      {{ "Deposits.Recurring.Stepper.Settings.preClosurePenalApplicable" | translate }}
     </mat-checkbox>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Penal Interest (%)</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.preClosurePenalInterest" | translate }}</mat-label>
       <input type="number" matInput formControlName="preClosurePenalInterest">
     </mat-form-field>
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Period</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.preClosurePenalInterestOnTypeId" | translate }}</mat-label>
       <mat-select formControlName="preClosurePenalInterestOnTypeId">
         <mat-option *ngFor="let preClosurePenalInterestOnType of preClosurePenalInterestOnTypeData"
           [value]="preClosurePenalInterestOnType.id">
@@ -177,19 +177,19 @@
     <!-- <mat-divider fxFlex="98%"></mat-divider> -->
 
     <mat-form-field fxFlex="48%">
-      <mat-label>Minimum Balance For Interest Calculation</mat-label>
+      <mat-label>{{ "Deposits.Recurring.Stepper.Settings.minBalanceForInterestCalculation" | translate }}</mat-label>
       <input currencyMask type="text" matInput formControlName="minBalanceForInterestCalculation">
     </mat-form-field>
 
     <ng-container *ngIf="taxGroup">
-      <h4 fxFlex="98%" class="mat-h4">Tax Group</h4>
+      <h4 fxFlex="98%" class="mat-h4">{{ "Deposits.Recurring.Stepper.Settings.h4_9" | translate }}</h4>
 
       <mat-checkbox fxFlex="48%" labelPosition="before" formControlName="withHoldTax" class="margin-v">
-        Is Withhold Tax Applicable?
+        {{ "Deposits.Recurring.Stepper.Settings.withHoldTax" | translate }}
       </mat-checkbox>
 
       <mat-form-field fxFlex="48%" *ngIf="recurringDepositAccountSettingsForm.controls.taxGroupId">
-        <mat-label>Tax Group</mat-label>
+        <mat-label>{{ "Deposits.Recurring.Stepper.Settings.taxGroupId" | translate }}</mat-label>
         <input type="text" matInput formControlName="taxGroupId">
       </mat-form-field>
     </ng-container>
@@ -199,10 +199,10 @@
   <div fxLayout="row" class="margin-t" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
     <button mat-raised-button matStepperPrevious>
       <fa-icon icon="arrow-left"></fa-icon>&nbsp;&nbsp;
-      Previous
+      {{ "ShareButton.PreviousEng" | translate }}
     </button>
     <button mat-raised-button matStepperNext>
-      Next&nbsp;&nbsp;
+      {{ "ShareButton.NextEng" | translate }}&nbsp;&nbsp;
       <fa-icon icon="arrow-right"></fa-icon>
     </button>
   </div>
