--- a/src/app/deposits/recurring-deposits/recurring-deposits-account-view/standing-instructions-tab/standing-instructions-tab.component.html
+++ b/src/app/deposits/recurring-deposits/recurring-deposits-account-view/standing-instructions-tab/standing-instructions-tab.component.html
@@ -9,41 +9,41 @@
     <table mat-table #instructionsTable [dataSource]="dataSource">
 
       <ng-container matColumnDef="client">
-        <th mat-header-cell *matHeaderCellDef> Client </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.View.StandingInstructionsTab.client" | translate }} </th>
         <td mat-cell *matCellDef="let instruction">{{instruction.fromClient.displayName}}-{{instruction.fromClient.id}}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="fromAccount">
-        <th mat-header-cell *matHeaderCellDef> From Account </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.View.StandingInstructionsTab.fromAccount" | translate }} </th>
         <td mat-cell *matCellDef="let instruction">{{instruction.fromAccount.accountNo}}
           ({{instruction.fromAccountType.value}})</td>
       </ng-container>
 
       <ng-container matColumnDef="beneficiary">
-        <th mat-header-cell *matHeaderCellDef> Beneficiary </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.View.StandingInstructionsTab.beneficiary" | translate }} </th>
         <td mat-cell *matCellDef="let instruction">{{instruction.toClient.displayName}}</td>
       </ng-container>
 
       <ng-container matColumnDef="toAccount">
-        <th mat-header-cell *matHeaderCellDef> To Account </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.View.StandingInstructionsTab.toAccount" | translate }} </th>
         <td mat-cell *matCellDef="let instruction">{{instruction.toAccount.accountNo}}
           ({{instruction.toAccountType.value}})</td>
       </ng-container>
 
       <ng-container matColumnDef="amount">
-        <th mat-header-cell *matHeaderCellDef> Amount </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.View.StandingInstructionsTab.amount" | translate }} </th>
         <td mat-cell *matCellDef="let instruction">{{instruction.instructionType.value}}/{{instruction.amount}}</td>
       </ng-container>
 
       <ng-container matColumnDef="validity">
-        <th mat-header-cell *matHeaderCellDef> Validity </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.View.StandingInstructionsTab.validity" | translate }} </th>
         <td mat-cell *matCellDef="let instruction">{{instruction.validFrom | date}} to {{instruction.validTill | date}}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <th mat-header-cell *matHeaderCellDef> {{ "Deposits.Recurring.View.StandingInstructionsTab.actions" | translate }} </th>
         <td mat-cell *matCellDef="let instruction">
           <span *ngIf="instruction.status.value!=='Deleted'">
             <button class="account-action-button" mat-raised-button color="primary"
